# logos-workflow-canvas

./: .gitmodules  CMakeLists.txt  README.md  SPECIFICATION.md  flake.nix  metadata.json  module.yaml  result
cmake/: FindOpenGL.cmake
qml/: WorkflowCanvas.qml
qml/delegates/: ControlFlowDelegate.qml  ModuleNodeDelegate.qml  TransformNodeDelegate.qml  TriggerNodeDelegate.qml  UtilityNodeDelegate.qml
resources/: canvas_resources.qrc
src/: CanvasComponent.cpp  CanvasComponent.h  CanvasWidget.cpp  CanvasWidget.h  WorkflowGraph.cpp  WorkflowGraph.h  WorkflowSerializer.cpp  WorkflowSerializer.h
src/nodes/: ControlFlowNode.cpp  ControlFlowNode.h  ModuleMethodNode.cpp  ModuleMethodNode.h  TransformNode.cpp  TransformNode.h  TriggerNode.cpp  TriggerNode.h  UtilityNode.cpp  UtilityNode.h
